Change log for duff
===================

Maintained since version 0.3.1.

2012-01-24  Camilla Berglund  <elmindreda@elmindreda.org>

 * duffentry.c (get_entry_sample, get_entry_digest, compare_entry_contents):
 Improved error reporting.
 * duff.h duffentry.c: Added BUFFER_SIZE macro for size of read buffers.
 * duff.1: Improved grammar for -z flag.
 * duff.1: Clarified language for -e flag.
 * duff.1: Fixed statement claiming digests are calculated in thorough mode.

2012-01-23  Camilla Berglund  <elmindreda@elmindreda.org>

 * duffdriver.c (process_args, process_clusters): Moved freeing of entries to
 directly after each bucket has been processed.
 * duffdriver.c (process_clusters): Renamed from report_clusters.
 * duffdriver.c: Moved from single to BUCKET_COUNT entry lists, indexed by size.
 * duffdriver.c (process_args): Added function.
 * duffdriver.c (process_path, report_clusters): Made private to duffdriver.
 * duff.c duffdriver.c: Moved argument processing to duffdriver.
 * duffentry.c (fill_entry): Renamed function from make_entry.
 * duffdriver.c (free_entry_list): Removed function.
 * duffdriver.c: Replaced doubly linked lists with List.
 * duffutil.c (entry_list_init, entry_list_alloc, entry_list_empty,
 entry_list_free): Added entry list functions.
 * duffutil.c (link_entry, unlink_entry): Removed functions.
 * duff.h (List): Added linear entry list struct and typedef.
 * duff.h (Entry): Removed list links.
 * duff.c (main): Saved header digest use before processing entries.
 * duff.c (header_uses_digest): Added global flag.
 * duffentry.c (report_cluster): Ensured that first cluster entry has digest.
 * duffentry.c (compare_entries): Added more early-out cases.
 * duffentry.c (get_entry_digest): Stopped reading empty files.
 * duffentry.c (generate_entry_digest): Added function.
 * duffentry.c (get_entry_digest): Hash sample if it contains entire file.
 * duffutil.c (error, warning): Prefixed program name to output.